# vio_initialization_evaluation

./: .gitignore  CMakeLists.txt  README.md  package.xml
scripts/: alignment.py  evaluation.py  initialization_evaluation.py  plot.py
scripts/data_tools/: Kitti2EuRoC.py  kitti_raw_imu_timestamps_visualization.py  kitti_to_euroc.py  rosbag2dataset.py  rosbag_to_euroc.py  timestamps_visualization.py
