<?xml version="1.0"?>
<package format="2">
  <name>vio_initialization_evaluation</name>
  <version>0.0.0</version>
  <description>The vio_initialization_evaluation package</description>

  <maintainer email="zjzhao@mae.cuhk.edu.hk">Zhenjun Zhao</maintainer>
  <author>Zhenjun Zhao</author>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
